src/objects/EmployeeAvailability__c.object
<CustomObject>
    <description>Used to hold employee availability</description>
    <fields>
        <fullName>Availability_Status__c</fullName>
        <description>Availability status is for approval flows for when employees submit a availability change</description>
        <label>Availability Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                    <color>#57F17C</color>
                    <default>true</default>
                    <label>Approved</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ClickCalendarName__c</fullName>
        <formula>Employee__r.FullName__c +&quot; (&quot;+ Employee__r.Name + &quot;)&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Click Calendar Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmployeeLookup__c</fullName>
        <formula>Employee__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Employee Lookup</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Employee name lookup</description>
        <inlineHelpText>Select the name of the employee this availability record is for</inlineHelpText>
        <label>Employee</label>
        <referenceTo>Employee__c</referenceTo>
        <relationshipLabel>Employee Availabilities</relationshipLabel>
        <relationshipName>EmployeeAvailabilities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EndDate__c</fullName>
        <description>End date of availability
- If left blank this means that the availability record have no end date</description>
        <inlineHelpText>Enter an End date if applicable. Leaving this blank means that the availability details are permanent</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FridayEnd1__c</fullName>
        <label>Friday End.</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>12:00 PM</fullName>
                </value>
                <value>
                    <fullName>12:05 PM</fullName>
                </value>
                <value>
                    <fullName>12:10 PM</fullName>
                </value>
                <value>
                    <fullName>12:15 PM</fullName>
                </value>
                <value>
                    <fullName>12:20 PM</fullName>
                </value>
                <value>
                    <fullName>12:25 PM</fullName>
                </value>
                <value>
                    <fullName>12:30 PM</fullName>
                </value>
                <value>
                    <fullName>12:35 PM</fullName>
                </value>
                <value>
                    <fullName>12:40 PM</fullName>
                </value>
                <value>
                    <fullName>12:45 PM</fullName>
                </value>
                <value>
                    <fullName>12:50 PM</fullName>
                </value>
                <value>
                    <fullName>12:55 PM</fullName>
                </value>
                <value>
                    <fullName>1:00 PM</fullName>
                </value>
                <value>
                    <fullName>1:05 PM</fullName>
                </value>
                <value>
                    <fullName>1:10 PM</fullName>
                </value>
                <value>
                    <fullName>1:15 PM</fullName>
                </value>
                <value>
                    <fullName>1:20 PM</fullName>
                </value>
                <value>
                    <fullName>1:25 PM</fullName>
                </value>
                <value>
                    <fullName>1:30 PM</fullName>
                </value>
                <value>
                    <fullName>1:35 PM</fullName>
                </value>
                <value>
                    <fullName>1:40 PM</fullName>
                </value>
                <value>
                    <fullName>1:45 PM</fullName>
                </value>
                <value>
                    <fullName>1:50 PM</fullName>
                </value>
                <value>
                    <fullName>1:55 PM</fullName>
                </value>
                <value>
                    <fullName>2:00 PM</fullName>
                </value>
                <value>
                    <fullName>2:05 PM</fullName>
                </value>
                <value>
                    <fullName>2:10 PM</fullName>
                </value>
                <value>
                    <fullName>2:15 PM</fullName>
                </value>
                <value>
                    <fullName>2:20 PM</fullName>
                </value>
                <value>
                    <fullName>2:25 PM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FridayEnd__c</fullName>
        <label>Friday End</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>12:00 PM</fullName>
                </value>
                <value>
                    <fullName>12:05 PM</fullName>
                </value>
                <value>
                    <fullName>12:10 PM</fullName>
                </value>
                <value>
                    <fullName>12:15 PM</fullName>
                </value>
                <value>
                    <fullName>12:20 PM</fullName>
                </value>
                <value>
                    <fullName>12:25 PM</fullName>
                </value>
                <value>
                    <fullName>12:30 PM</fullName>
                </value>
                <value>
                    <fullName>12:35 PM</fullName>
                </value>
                <value>
                    <fullName>12:40 PM</fullName>
                </value>
                <value>
                    <fullName>12:45 PM</fullName>
                </value>
                <value>
                    <fullName>12:50 PM</fullName>
                </value>
                <value>
                    <fullName>12:55 PM</fullName>
                </value>
                <value>
                    <fullName>1:00 PM</fullName>
                </value>
                <value>
                    <fullName>1:05 PM</fullName>
                </value>
                <value>
                    <fullName>1:10 PM</fullName>
                </value>
                <value>
                    <fullName>1:15 PM</fullName>
                </value>
                <value>
                    <fullName>1:20 PM</fullName>
                </value>
                <value>
                    <fullName>1:25 PM</fullName>
                </value>
                <value>
                    <fullName>1:30 PM</fullName>
                </value>
                <value>
                    <fullName>1:35 PM</fullName>
                </value>
                <value>
                    <fullName>1:40 PM</fullName>
                </value>
                <value>
                    <fullName>1:45 PM</fullName>
                </value>
                <value>
                    <fullName>1:50 PM</fullName>
                </value>
                <value>
                    <fullName>1:55 PM</fullName>
                </value>
                <value>
                    <fullName>2:00 PM</fullName>
                </value>
                <value>
                    <fullName>2:05 PM</fullName>
                </value>
                <value>
                    <fullName>2:10 PM</fullName>
                </value>
                <value>
                    <fullName>2:15 PM</fullName>
                </value>
                <value>
                    <fullName>2:20 PM</fullName>
                </value>
                <value>
                    <fullName>2:25 PM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FridayStart1__c</fullName>
        <label>Friday Start.</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>6:00 AM</fullName>
                </value>
                <value>
                    <fullName>6:05 AM</fullName>
                </value>
                <value>
                    <fullName>6:10 AM</fullName>
                </value>
                <value>
                    <fullName>6:15 AM</fullName>
                </value>
                <value>
                    <fullName>6:20 AM</fullName>
                </value>
                <value>
                    <fullName>6:25 AM</fullName>
                </value>
                <value>
                    <fullName>6:30 AM</fullName>
                </value>
                <value>
                    <fullName>6:35 AM</fullName>
                </value>
                <value>
                    <fullName>6:40 AM</fullName>
                </value>
                <value>
                    <fullName>6:45 AM</fullName>
                </value>
                <value>
                    <fullName>6:50 AM</fullName>
                </value>
                <value>
                    <fullName>6:55 AM</fullName>
                </value>
                <value>
                    <fullName>7:00 AM</fullName>
                </value>
                <value>
                    <fullName>7:05 AM</fullName>
                </value>
                <value>
                    <fullName>7:10 AM</fullName>
                </value>
                <value>
                    <fullName>7:15 AM</fullName>
                </value>
                <value>
                    <fullName>7:20 AM</fullName>
                </value>
                <value>
                    <fullName>7:25 AM</fullName>
                </value>
                <value>
                    <fullName>7:30 AM</fullName>
                </value>
                <value>
                    <fullName>7:35 AM</fullName>
                </value>
                <value>
                    <fullName>7:40 AM</fullName>
                </value>
                <value>
                    <fullName>7:45 AM</fullName>
                </value>
                <value>
                    <fullName>7:50 AM</fullName>
                </value>
                <value>
                    <fullName>7:55 AM</fullName>
                </value>
                <value>
                    <fullName>8:00 AM</fullName>
                </value>
                <value>
                    <fullName>8:05 AM</fullName>
                </value>
                <value>
                    <fullName>8:10 AM</fullName>
                </value>
                <value>
                    <fullName>8:15 AM</fullName>
                </value>
                <value>
                    <fullName>8:20 AM</fullName>
                </value>
                <value>
                    <fullName>8:25 AM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FridayStart__c</fullName>
        <label>Friday Start</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>6:00 AM</fullName>
                </value>
                <value>
                    <fullName>6:05 AM</fullName>
                </value>
                <value>
                    <fullName>6:10 AM</fullName>
                </value>
                <value>
                    <fullName>6:15 AM</fullName>
                </value>
                <value>
                    <fullName>6:20 AM</fullName>
                </value>
                <value>
                    <fullName>6:25 AM</fullName>
                </value>
                <value>
                    <fullName>6:30 AM</fullName>
                </value>
                <value>
                    <fullName>6:35 AM</fullName>
                </value>
                <value>
                    <fullName>6:40 AM</fullName>
                </value>
                <value>
                    <fullName>6:45 AM</fullName>
                </value>
                <value>
                    <fullName>6:50 AM</fullName>
                </value>
                <value>
                    <fullName>6:55 AM</fullName>
                </value>
                <value>
                    <fullName>7:00 AM</fullName>
                </value>
                <value>
                    <fullName>7:05 AM</fullName>
                </value>
                <value>
                    <fullName>7:10 AM</fullName>
                </value>
                <value>
                    <fullName>7:15 AM</fullName>
                </value>
                <value>
                    <fullName>7:20 AM</fullName>
                </value>
                <value>
                    <fullName>7:25 AM</fullName>
                </value>
                <value>
                    <fullName>7:30 AM</fullName>
                </value>
                <value>
                    <fullName>7:35 AM</fullName>
                </value>
                <value>
                    <fullName>7:40 AM</fullName>
                </value>
                <value>
                    <fullName>7:45 AM</fullName>
                </value>
                <value>
                    <fullName>7:50 AM</fullName>
                </value>
                <value>
                    <fullName>7:55 AM</fullName>
                </value>
                <value>
                    <fullName>8:00 AM</fullName>
                </value>
                <value>
                    <fullName>8:05 AM</fullName>
                </value>
                <value>
                    <fullName>8:10 AM</fullName>
                </value>
                <value>
                    <fullName>8:15 AM</fullName>
                </value>
                <value>
                    <fullName>8:20 AM</fullName>
                </value>
                <value>
                    <fullName>8:25 AM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MondayEnd1__c</fullName>
        <label>Monday End.</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>12:00 PM</fullName>
                </value>
                <value>
                    <fullName>12:05 PM</fullName>
                </value>
                <value>
                    <fullName>12:10 PM</fullName>
                </value>
                <value>
                    <fullName>12:15 PM</fullName>
                </value>
                <value>
                    <fullName>12:20 PM</fullName>
                </value>
                <value>
                    <fullName>12:25 PM</fullName>
                </value>
                <value>
                    <fullName>12:30 PM</fullName>
                </value>
                <value>
                    <fullName>12:35 PM</fullName>
                </value>
                <value>
                    <fullName>12:40 PM</fullName>
                </value>
                <value>
                    <fullName>12:45 PM</fullName>
                </value>
                <value>
                    <fullName>12:50 PM</fullName>
                </value>
                <value>
                    <fullName>12:55 PM</fullName>
                </value>
                <value>
                    <fullName>1:00 PM</fullName>
                </value>
                <value>
                    <fullName>1:05 PM</fullName>
                </value>
                <value>
                    <fullName>1:10 PM</fullName>
                </value>
                <value>
                    <fullName>1:15 PM</fullName>
                </value>
                <value>
                    <fullName>1:20 PM</fullName>
                </value>
                <value>
                    <fullName>1:25 PM</fullName>
                </value>
                <value>
                    <fullName>1:30 PM</fullName>
                </value>
                <value>
                    <fullName>1:35 PM</fullName>
                </value>
                <value>
                    <fullName>1:40 PM</fullName>
                </value>
                <value>
                    <fullName>1:45 PM</fullName>
                </value>
                <value>
                    <fullName>1:50 PM</fullName>
                </value>
                <value>
                    <fullName>1:55 PM</fullName>
                </value>
                <value>
                    <fullName>2:00 PM</fullName>
                </value>
                <value>
                    <fullName>2:05 PM</fullName>
                </value>
                <value>
                    <fullName>2:10 PM</fullName>
                </value>
                <value>
                    <fullName>2:15 PM</fullName>
                </value>
                <value>
                    <fullName>2:20 PM</fullName>
                </value>
                <value>
                    <fullName>2:25 PM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MondayEnd__c</fullName>
        <label>Monday End</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>12:00 PM</fullName>
                </value>
                <value>
                    <fullName>12:05 PM</fullName>
                </value>
                <value>
                    <fullName>12:10 PM</fullName>
                </value>
                <value>
                    <fullName>12:15 PM</fullName>
                </value>
                <value>
                    <fullName>12:20 PM</fullName>
                </value>
                <value>
                    <fullName>12:25 PM</fullName>
                </value>
                <value>
                    <fullName>12:30 PM</fullName>
                </value>
                <value>
                    <fullName>12:35 PM</fullName>
                </value>
                <value>
                    <fullName>12:40 PM</fullName>
                </value>
                <value>
                    <fullName>12:45 PM</fullName>
                </value>
                <value>
                    <fullName>12:50 PM</fullName>
                </value>
                <value>
                    <fullName>12:55 PM</fullName>
                </value>
                <value>
                    <fullName>1:00 PM</fullName>
                </value>
                <value>
                    <fullName>1:05 PM</fullName>
                </value>
                <value>
                    <fullName>1:10 PM</fullName>
                </value>
                <value>
                    <fullName>1:15 PM</fullName>
                </value>
                <value>
                    <fullName>1:20 PM</fullName>
                </value>
                <value>
                    <fullName>1:25 PM</fullName>
                </value>
                <value>
                    <fullName>1:30 PM</fullName>
                </value>
                <value>
                    <fullName>1:35 PM</fullName>
                </value>
                <value>
                    <fullName>1:40 PM</fullName>
                </value>
                <value>
                    <fullName>1:45 PM</fullName>
                </value>
                <value>
                    <fullName>1:50 PM</fullName>
                </value>
                <value>
                    <fullName>1:55 PM</fullName>
                </value>
                <value>
                    <fullName>2:00 PM</fullName>
                </value>
                <value>
                    <fullName>2:05 PM</fullName>
                </value>
                <value>
                    <fullName>2:10 PM</fullName>
                </value>
                <value>
                    <fullName>2:15 PM</fullName>
                </value>
                <value>
                    <fullName>2:20 PM</fullName>
                </value>
                <value>
                    <fullName>2:25 PM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MondayStart1__c</fullName>
        <label>Monday Start.</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>6:00 AM</fullName>
                </value>
                <value>
                    <fullName>6:05 AM</fullName>
                </value>
                <value>
                    <fullName>6:10 AM</fullName>
                </value>
                <value>
                    <fullName>6:15 AM</fullName>
                </value>
                <value>
                    <fullName>6:20 AM</fullName>
                </value>
                <value>
                    <fullName>6:25 AM</fullName>
                </value>
                <value>
                    <fullName>6:30 AM</fullName>
                </value>
                <value>
                    <fullName>6:35 AM</fullName>
                </value>
                <value>
                    <fullName>6:40 AM</fullName>
                </value>
                <value>
                    <fullName>6:45 AM</fullName>
                </value>
                <value>
                    <fullName>6:50 AM</fullName>
                </value>
                <value>
                    <fullName>6:55 AM</fullName>
                </value>
                <value>
                    <fullName>7:00 AM</fullName>
                </value>
                <value>
                    <fullName>7:05 AM</fullName>
                </value>
                <value>
                    <fullName>7:10 AM</fullName>
                </value>
                <value>
                    <fullName>7:15 AM</fullName>
                </value>
                <value>
                    <fullName>7:20 AM</fullName>
                </value>
                <value>
                    <fullName>7:25 AM</fullName>
                </value>
                <value>
                    <fullName>7:30 AM</fullName>
                </value>
                <value>
                    <fullName>7:35 AM</fullName>
                </value>
                <value>
                    <fullName>7:40 AM</fullName>
                </value>
                <value>
                    <fullName>7:45 AM</fullName>
                </value>
                <value>
                    <fullName>7:50 AM</fullName>
                </value>
                <value>
                    <fullName>7:55 AM</fullName>
                </value>
                <value>
                    <fullName>8:00 AM</fullName>
                </value>
                <value>
                    <fullName>8:05 AM</fullName>
                </value>
                <value>
                    <fullName>8:10 AM</fullName>
                </value>
                <value>
                    <fullName>8:15 AM</fullName>
                </value>
                <value>
                    <fullName>8:20 AM</fullName>
                </value>
                <value>
                    <fullName>8:25 AM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MondayStart__c</fullName>
        <label>Monday Start</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>6:00 AM</fullName>
                </value>
                <value>
                    <fullName>6:05 AM</fullName>
                </value>
                <value>
                    <fullName>6:10 AM</fullName>
                </value>
                <value>
                    <fullName>6:15 AM</fullName>
                </value>
                <value>
                    <fullName>6:20 AM</fullName>
                </value>
                <value>
                    <fullName>6:25 AM</fullName>
                </value>
                <value>
                    <fullName>6:30 AM</fullName>
                </value>
                <value>
                    <fullName>6:35 AM</fullName>
                </value>
                <value>
                    <fullName>6:40 AM</fullName>
                </value>
                <value>
                    <fullName>6:45 AM</fullName>
                </value>
                <value>
                    <fullName>6:50 AM</fullName>
                </value>
                <value>
                    <fullName>6:55 AM</fullName>
                </value>
                <value>
                    <fullName>7:00 AM</fullName>
                </value>
                <value>
                    <fullName>7:05 AM</fullName>
                </value>
                <value>
                    <fullName>7:10 AM</fullName>
                </value>
                <value>
                    <fullName>7:15 AM</fullName>
                </value>
                <value>
                    <fullName>7:20 AM</fullName>
                </value>
                <value>
                    <fullName>7:25 AM</fullName>
                </value>
                <value>
                    <fullName>7:30 AM</fullName>
                </value>
                <value>
                    <fullName>7:35 AM</fullName>
                </value>
                <value>
                    <fullName>7:40 AM</fullName>
                </value>
                <value>
                    <fullName>7:45 AM</fullName>
                </value>
                <value>
                    <fullName>7:50 AM</fullName>
                </value>
                <value>
                    <fullName>7:55 AM</fullName>
                </value>
                <value>
                    <fullName>8:00 AM</fullName>
                </value>
                <value>
                    <fullName>8:05 AM</fullName>
                </value>
                <value>
                    <fullName>8:10 AM</fullName>
                </value>
                <value>
                    <fullName>8:15 AM</fullName>
                </value>
                <value>
                    <fullName>8:20 AM</fullName>
                </value>
                <value>
                    <fullName>8:25 AM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PushToWMS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Push To WMS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SaturdayEnd1__c</fullName>
        <label>Saturday End.</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>12:00 PM</fullName>
                </value>
                <value>
                    <fullName>12:05 PM</fullName>
                </value>
                <value>
                    <fullName>12:10 PM</fullName>
                </value>
                <value>
                    <fullName>12:15 PM</fullName>
                </value>
                <value>
                    <fullName>12:20 PM</fullName>
                </value>
                <value>
                    <fullName>12:25 PM</fullName>
                </value>
                <value>
                    <fullName>12:30 PM</fullName>
                </value>
                <value>
                    <fullName>12:35 PM</fullName>
                </value>
                <value>
                    <fullName>12:40 PM</fullName>
                </value>
                <value>
                    <fullName>12:45 PM</fullName>
                </value>
                <value>
                    <fullName>12:50 PM</fullName>
                </value>
                <value>
                    <fullName>12:55 PM</fullName>
                </value>
                <value>
                    <fullName>1:00 PM</fullName>
                </value>
                <value>
                    <fullName>1:05 PM</fullName>
                </value>
                <value>
                    <fullName>1:10 PM</fullName>
                </value>
                <value>
                    <fullName>1:15 PM</fullName>
                </value>
                <value>
                    <fullName>1:20 PM</fullName>
                </value>
                <value>
                    <fullName>1:25 PM</fullName>
                </value>
                <value>
                    <fullName>1:30 PM</fullName>
                </value>
                <value>
                    <fullName>1:35 PM</fullName>
                </value>
                <value>
                    <fullName>1:40 PM</fullName>
                </value>
                <value>
                    <fullName>1:45 PM</fullName>
                </value>
                <value>
                    <fullName>1:50 PM</fullName>
                </value>
                <value>
                    <fullName>1:55 PM</fullName>
                </value>
                <value>
                    <fullName>2:00 PM</fullName>
                </value>
                <value>
                    <fullName>2:05 PM</fullName>
                </value>
                <value>
                    <fullName>2:10 PM</fullName>
                </value>
                <value>
                    <fullName>2:15 PM</fullName>
                </value>
                <value>
                    <fullName>2:20 PM</fullName>
                </value>
                <value>
                    <fullName>2:25 PM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SaturdayEnd__c</fullName>
        <label>Saturday End</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>12:00 PM</fullName>
                </value>
                <value>
                    <fullName>12:05 PM</fullName>
                </value>
                <value>
                    <fullName>12:10 PM</fullName>
                </value>
                <value>
                    <fullName>12:15 PM</fullName>
                </value>
                <value>
                    <fullName>12:20 PM</fullName>
                </value>
                <value>
                    <fullName>12:25 PM</fullName>
                </value>
                <value>
                    <fullName>12:30 PM</fullName>
                </value>
                <value>
                    <fullName>12:35 PM</fullName>
                </value>
                <value>
                    <fullName>12:40 PM</fullName>
                </value>
                <value>
                    <fullName>12:45 PM</fullName>
                </value>
                <value>
                    <fullName>12:50 PM</fullName>
                </value>
                <value>
                    <fullName>12:55 PM</fullName>
                </value>
                <value>
                    <fullName>1:00 PM</fullName>
                </value>
                <value>
                    <fullName>1:05 PM</fullName>
                </value>
                <value>
                    <fullName>1:10 PM</fullName>
                </value>
                <value>
                    <fullName>1:15 PM</fullName>
                </value>
                <value>
                    <fullName>1:20 PM</fullName>
                </value>
                <value>
                    <fullName>1:25 PM</fullName>
                </value>
                <value>
                    <fullName>1:30 PM</fullName>
                </value>
                <value>
                    <fullName>1:35 PM</fullName>
                </value>
                <value>
                    <fullName>1:40 PM</fullName>
                </value>
                <value>
                    <fullName>1:45 PM</fullName>
                </value>
                <value>
                    <fullName>1:50 PM</fullName>
                </value>
                <value>
                    <fullName>1:55 PM</fullName>
                </value>
                <value>
                    <fullName>2:00 PM</fullName>
                </value>
                <value>
                    <fullName>2:05 PM</fullName>
                </value>
                <value>
                    <fullName>2:10 PM</fullName>
                </value>
                <value>
                    <fullName>2:15 PM</fullName>
                </value>
                <value>
                    <fullName>2:20 PM</fullName>
                </value>
                <value>
                    <fullName>2:25 PM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>